Change hostname to bennet.tech, fix whitespace issues

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ body {
 p {
     margin-top: 5px;
     margin-bottom: 5px;
+    white-space: pre;
 }
 
 .commands {
